k8s/app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heyday-api-dep 
  namespace: hey-dey-namespace
spec: 
  replicas: 1
  selector: 
    matchLabels:
        component: heyday-api
  template: 
    metadata:
      labels: 
        component: heyday-api
    spec:
      containers: 
      - name: heyday-api
        image: abdm6464/hey-day-app:V0.0.1
        imagePullPolicy: IfNotPresent 
        ports: 
        - containerPort: 3000
---



apiVersion: v1
kind: Service
metadata: 
    name: heyday-svc
    namespace: hey-dey-namespace 
spec: 
  type: ClusterIP
  ports: 
    - port: 3000 #allow other pods access to this pod
      targetPort: 3000 #the target port of the containter
  selector: 
    component:  heyday-api
