k8s/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
  namespace: hey-dey-namespace
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
