k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: dnbo-ingress-service
  namespace : hey-dey-namespace 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: heyday-svc
            port:
              number: 3000
